# wol

./: .env  Cargo.toml  readme.md
.github/workflows/: main.yml
src/: args.rs  device.rs  error.rs  main.rs  screen_reader.rs  volume.rs
